Adding a spinner to the home page

--- a/index.html
+++ b/index.html
@@ -13,6 +13,7 @@
         <h1>Nos photographes</h1>
     </header>
     <main id="main">
+            <div class="spinner" id="spinner"></div>
         <div class="photographer_section"></div>
     </main>
     <script src="scripts/templates/photographer.js"></script>
