Adding sections for single photographer realisations + adding styling

--- a/photographer.html
+++ b/photographer.html
@@ -8,6 +8,7 @@
             href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
             rel="stylesheet"
         />
+        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
         <title>Fisheye - photographe</title>
     </head>
     <body>
@@ -16,6 +17,8 @@
         </header>
         <main id="main">
             <div class="photograph-header"></div>
+            <div class="photograph-filter"></div>
+            <div class="photographer-realisations" style="padding: 100px 100px 0 100px;"></div>
         </main>
         <div id="contact_modal">
             <div class="modal">
@@ -34,6 +37,7 @@
         </div>
         <script src="/scripts/pages/photographer.js"></script>
         <script src="/scripts/templates/photographer.js"></script>
+        <script src="/scripts/templates/media_factory.js"></script>
         <script src="/scripts/utils/contactForm.js"></script>
     </body>
 </html>
