--- a/index.html
+++ b/index.html
@@ -1,22 +1,31 @@
 <!DOCTYPE html>
 <html lang="fr">
-  <head>
-    <link href="css/style.css" rel="stylesheet" type="text/css" />
-    <meta charset="utf-8">
-    <link rel="icon" type="image/png" href="assets/favicon.png">
-    <link href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap" rel="stylesheet">
-    <title>Fisheye</title>
-  </head>
-  <body>
-    <header>
-        <img src="assets/images/logo.png" class="logo" alt="fisheye logo"/>
-        <h1>Nos photographes</h1>
-    </header>
-    <main id="main">
+    <head>
+        <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href="css/mediaqueries.css" rel="stylesheet" type="text/css" />
+        <meta charset="utf-8" />
+        <link rel="icon" type="image/png" href="assets/favicon.png" />
+        <link
+            href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
+            rel="stylesheet"
+        />
+        <title>Fisheye</title>
+    </head>
+    <body>
+        <header>
+            <img
+                src="assets/images/logo.png"
+                class="logo"
+                alt="fisheye logo"
+                aria-label="Lien vers la page d'accueil"
+            />
+            <h1>Nos photographes</h1>
+        </header>
+        <main id="main">
             <div class="spinner" id="spinner"></div>
-        <div class="photographer_section"></div>
-    </main>
-    <script src="scripts/templates/photographer.js"></script>
-    <script src="scripts/pages/index.js"></script>
-  </body>
+            <div class="photographer_section"></div>
+        </main>
+        <script src="scripts/templates/photographer.js"></script>
+        <script src="scripts/pages/index.js"></script>
+    </body>
 </html>
