--- a/photographer.html
+++ b/photographer.html
@@ -28,11 +28,23 @@
                 </header>
                 <form>
                     <div>
-                        <label>Prénom</label>
-                        <input />
+                        <label for="prenom">Prénom</label>
+                        <input type="text" id="prenom" name="prenom" />
                     </div>
-                    <button class="contact_button">Envoyer</button>
-                </form>
+                    <div>
+                        <label for="nom">Nom</label>
+                        <input type="text" id="nom" name="nom" />
+                    </div>
+                    <div>
+                        <label for="email">Email</label>
+                        <input type="email" id="email" name="email" />
+                    </div>
+                    <div>
+                        <label for="message">Votre message</label>
+                        <textarea id="message" name="message" rows="4" cols="50"></textarea>
+                    </div>
+                    <button type="submit" class="contact_button">Envoyer</button>
+                </form>                
             </div>
         </div>
         <script src="/scripts/pages/photographer.js"></script>
