--- a/photographer.html
+++ b/photographer.html
@@ -26,24 +26,28 @@
                     <h2>Contactez-moi</h2>
                     <img src="assets/icons/close.svg" onclick="closeModal()" />
                 </header>
-                <form>
+                <form id="contactForm">
                     <div>
                         <label for="prenom">Prénom</label>
                         <input type="text" id="prenom" name="prenom" />
+                        <span id="firstNameError" class="error"></span>
                     </div>
                     <div>
                         <label for="nom">Nom</label>
                         <input type="text" id="nom" name="nom" />
+                        <span id="lastNameError" class="error"></span>
                     </div>
                     <div>
                         <label for="email">Email</label>
                         <input type="email" id="email" name="email" />
+                        <span id="emailError" class="error"></span>
                     </div>
                     <div>
                         <label for="message">Votre message</label>
                         <textarea id="message" name="message" rows="4" cols="50"></textarea>
+                        <span id="messageError" class="error"></span>
                     </div>
-                    <button type="submit" class="contact_button">Envoyer</button>
+                    <button type="button" onclick="submitForm()" class="contact_button">Envoyer</button>
                 </form>                
             </div>
         </div>
