--- a/photographer.html
+++ b/photographer.html
@@ -19,41 +19,13 @@
             <div class="photograph-header"></div>
             <div class="photograph-filter"></div>
             <div class="photographer-realisations" style="padding: 100px 100px 0 100px;"></div>
+            <div id="contact_modal" class="contact_modal"></div>
+            <div id="lightbox_modal" class="lightbox_modal"></div>
         </main>
-        <div id="contact_modal">
-            <div class="modal">
-                <header>
-                    <h2>Contactez-moi</h2>
-                    <img src="assets/icons/close.svg" onclick="closeModal()" />
-                </header>
-                <form id="contactForm">
-                    <div>
-                        <label for="prenom">Prénom</label>
-                        <input type="text" id="prenom" name="prenom" />
-                        <span id="firstNameError" class="error"></span>
-                    </div>
-                    <div>
-                        <label for="nom">Nom</label>
-                        <input type="text" id="nom" name="nom" />
-                        <span id="lastNameError" class="error"></span>
-                    </div>
-                    <div>
-                        <label for="email">Email</label>
-                        <input type="email" id="email" name="email" />
-                        <span id="emailError" class="error"></span>
-                    </div>
-                    <div>
-                        <label for="message">Votre message</label>
-                        <textarea id="message" name="message" rows="4" cols="50"></textarea>
-                        <span id="messageError" class="error"></span>
-                    </div>
-                    <button type="button" onclick="submitForm()" class="contact_button">Envoyer</button>
-                </form>                
-            </div>
-        </div>
         <script src="/scripts/pages/photographer.js"></script>
         <script src="/scripts/templates/photographer.js"></script>
         <script src="/scripts/templates/media_factory.js"></script>
         <script src="/scripts/utils/contactForm.js"></script>
+        <script src="/scripts/utils/likes.js"></script>
     </body>
 </html>
