--- a/photographer.html
+++ b/photographer.html
@@ -8,7 +8,10 @@
             href="https://fonts.googleapis.com/css?family=DM+Sans&display=swap"
             rel="stylesheet"
         />
-        <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
+        <link
+            rel="stylesheet"
+            href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css"
+        />
         <title>Fisheye - photographe</title>
     </head>
     <body>
@@ -18,8 +21,55 @@
         <main id="main">
             <div class="photograph-header"></div>
             <div class="photograph-filter"></div>
-            <div class="photographer-realisations" style="padding: 100px 100px 0 100px;"></div>
-            <div id="contact_modal" class="contact_modal"></div>
+            <div
+                class="photographer-realisations"
+                style="padding: 100px 100px 0 100px"
+            ></div>
+            <div id="contact_modal" class="contact_modal">
+                <div class="modal">
+                    <header>
+                        <h2>Contactez-moi</h2>
+                        <img
+                            src="assets/icons/close.svg"
+                            onclick="closeModal()"
+                        />
+                    </header>
+                    <form id="contactForm">
+                        <div>
+                            <label for="prenom">Prénom</label>
+                            <input type="text" id="prenom" name="prenom" />
+                            <span id="firstNameError" class="error"></span>
+                        </div>
+                        <div>
+                            <label for="nom">Nom</label>
+                            <input type="text" id="nom" name="nom" />
+                            <span id="lastNameError" class="error"></span>
+                        </div>
+                        <div>
+                            <label for="email">Email</label>
+                            <input type="email" id="email" name="email" />
+                            <span id="emailError" class="error"></span>
+                        </div>
+                        <div>
+                            <label for="message">Votre message</label>
+                            <textarea
+                                id="message"
+                                name="message"
+                                rows="4"
+                                cols="50"
+                            ></textarea>
+                            <span id="messageError" class="error"></span>
+                        </div>
+                        <button
+                            type="button"
+                            onclick="submitForm()"
+                            class="contact_button"
+                        >
+                            Envoyer
+                        </button>
+                    </form>
+                </div>
+            </div>
             <div id="lightbox_modal" class="lightbox_modal"></div>
         </main>
         <script src="/scripts/pages/photographer.js"></script>
