--- a/photographer.html
+++ b/photographer.html
@@ -2,6 +2,7 @@
 <html>
     <head>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
+        <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
         <meta charset="utf-8" />
         <link rel="icon" type="image/png" href="assets/favicon.png" />
         <link
