--- a/photographer.html
+++ b/photographer.html
@@ -91,10 +91,10 @@
             </div>
             <div id="lightbox_modal" class="lightbox_modal"></div>
         </main>
-        <script src="/scripts/pages/photographer.js"></script>
-        <script src="/scripts/templates/photographer.js"></script>
-        <script src="/scripts/templates/media_factory.js"></script>
-        <script src="/scripts/utils/contactForm.js"></script>
-        <script src="/scripts/utils/likes.js"></script>
+        <script src="scripts/pages/photographer.js"></script>
+        <script src="scripts/templates/photographer.js"></script>
+        <script src="scripts/templates/media_factory.js"></script>
+        <script src="scripts/utils/contactForm.js"></script>
+        <script src="scripts/utils/likes.js"></script>
     </body>
 </html>
