Adding title to lightbox + small style adjustments

--- a/index.html
+++ b/index.html
@@ -16,8 +16,7 @@
             <img
                 src="assets/images/logo.png"
                 class="logo"
-                alt="fisheye logo"
-                aria-label="Lien vers la page d'accueil"
+                alt="Fisheye Home Page"
             />
             <h1>Nos photographes</h1>
         </header>
