--- a/photographer.html
+++ b/photographer.html
@@ -17,7 +17,7 @@
     </head>
     <body>
         <header>
-            <img src="assets/images/logo.png" class="logo" />
+            <img src="assets/images/logo.png" class="logo" alt="Fisheye Home Page" />
         </header>
         <main id="main">
             <div class="photograph-header"></div>
