accessibility a checker warning

--- a/photographer.html
+++ b/photographer.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<html>
+<html lang="fr">
     <head>
         <link href="css/style.css" rel="stylesheet" type="text/css" />
         <link href="css/lightbox.css" rel="stylesheet" type="text/css" />
@@ -42,7 +42,6 @@
             
             <div
                 class="photographer-realisations"
-                style="padding: 100px 100px 0 100px"
             ></div>
             <div id="contact_modal" class="contact_modal">
                 <div class="modal">
