Adding tabindex for accessibility

--- a/photographer.html
+++ b/photographer.html
@@ -24,19 +24,19 @@
             <div class="photograph-filter"></div>
             <div class="select-group">
                 <h2 class="select-text">Trier par</h2>
-                <button id="button" class="btn-sort" aria-haspopup="listbox" aria-expanded="false">
+                <button id="button" class="btn-sort" aria-haspopup="listbox" aria-expanded="false" tabindex="2">
                     <span id="select-label" class="btn-text">Popularité</span>
                     <div id="arrow" class="btn-arrow"></div>
                 </button>
             
-                <fieldset class="dropdown hidden" id="dropdown" role="listbox">
+                <fieldset class="dropdown hidden" id="dropdown" role="listbox" tabindex="2">
                     <legend class="select-legend">Choisir de trier par:</legend>
                     <input type="radio" id="popularite" value="popularity" class="option" role="button">
-                    <label for="popularite" class="select-item" tabindex="0">Popularité</label>
+                    <label for="popularite" class="select-item" tabindex="2">Popularité</label>
                     <input type="radio" id="date" value="date" class="option" role="button">
-                    <label for="date" class="select-item" tabindex="0">Date</label>
+                    <label for="date" class="select-item" tabindex="2">Date</label>
                     <input type="radio" id="title" value="title" class="option" role="button">
-                    <label for="title" class="select-item" tabindex="0">Titre</label>
+                    <label for="title" class="select-item" tabindex="2">Titre</label>
                 </fieldset>
             </div>
             
@@ -44,28 +44,29 @@
                 class="photographer-realisations"
             ></div>
             <div id="contact_modal" class="contact_modal">
-                <div class="modal">
+                <div class="modal" tabindex="1">
                     <header>
-                        <h2>Contactez-moi</h2>
+                        <h2 >Contactez-moi</h2>
                         <img
                             src="assets/icons/close.svg"
+                            tabindex="1"
                             onclick="closeModal()"
                         />
                     </header>
-                    <form id="contactForm">
+                    <form id="contactForm" >
                         <div>
                             <label for="prenom">Prénom</label>
-                            <input type="text" id="prenom" name="prenom" />
+                            <input type="text" id="prenom" name="prenom" tabindex="1" />
                             <span id="firstNameError" class="error"></span>
                         </div>
                         <div>
                             <label for="nom">Nom</label>
-                            <input type="text" id="nom" name="nom" />
+                            <input type="text" id="nom" name="nom" tabindex="1"/>
                             <span id="lastNameError" class="error"></span>
                         </div>
                         <div>
                             <label for="email">Email</label>
-                            <input type="email" id="email" name="email" />
+                            <input type="email" id="email" name="email" tabindex="1"/>
                             <span id="emailError" class="error"></span>
                         </div>
                         <div>
@@ -75,6 +76,7 @@
                                 name="message"
                                 rows="4"
                                 cols="50"
+                                tabindex="1"
                             ></textarea>
                             <span id="messageError" class="error"></span>
                         </div>
@@ -82,6 +84,7 @@
                             type="button"
                             onclick="submitForm()"
                             class="contact_button"
+                            tabindex="1"
                         >
                             Envoyer
                         </button>
