Adding alt to an image

--- a/photographer.html
+++ b/photographer.html
@@ -50,6 +50,7 @@
                         <img
                             src="assets/icons/close.svg"
                             tabindex="1"
+                            alt="Close button"
                             onclick="closeModal()"
                         />
                     </header>
